--- a/styles/base.css
+++ b/styles/base.css
@@ -4,34 +4,36 @@ body {
 }
 
 header, nav,  main, footer {
-    margin: auto;
     padding: 1px;
     font-family: 'Roboto Slab', 'Vollkorn', 'Pathway Extreme', sans-serif;
 }
 
 header {
     display: grid;
-    text-align: center;
-    grid-template-columns: auto auto;
-    grid-template-rows: auto;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: auto auto auto auto;
     padding: 5px;
 }
 
 header img {
     margin: 10px;
     max-width: 125px;
-    grid-column: 1/2;
+    grid-row: 1/4;
     border: 2px solid black;
 }
 
 header h1 {
-    grid-column: 2/2;
+    grid-column: 2/3;
+    grid-row: 2;
     text-align: center;
 }
 
 nav {
+    display: grid;
+    grid-template-rows: auto;
     background-color: black;
     text-align: center;
+    padding: 5px;
 }
 
 nav a {
@@ -40,6 +42,9 @@ nav a {
 }
 
 main {
+    margin: auto;
+    display: grid;
+    grid-template-rows: auto auto auto auto;
     width: 90%;
 }
 
