--- a/styles/base.css
+++ b/styles/base.css
@@ -1,4 +1,5 @@
 body {
+    display: grid;
     margin: auto;
     width: 35%;
 }
@@ -10,21 +11,21 @@ header, nav,  main, footer {
 
 header {
     display: grid;
-    grid-template-columns: auto;
+    grid-template-columns: auto auto;
     padding: 5px;
 }
 
 header img {
     margin: 10px;
     max-width: 70px;
-    grid-column: 2;
+    grid-column: 1;
     border: 2px solid black;
+    float: left;
 }
 
 header h1 {
-    margin: 35px;
-    grid-column: 3;
-    text-align: left;
+    margin: auto;
+    grid-column: 2;
 }
 
 nav {
@@ -43,6 +44,7 @@ nav a {
 
 main {
     margin: auto;
+    margin-bottom: 5px;
     display: grid;
     grid-column: 1/2;
     /*grid-template-rows: auto auto auto auto;*/
@@ -61,8 +63,14 @@ h2, h3, p {
 
 hr.separator {
     border: 1px solid black;
-    margin: 0;
+    margin: auto;
+    margin-bottom: 5px;
     width: 100%;
+}
+
+h2 {
+    margin-bottom: 0;
+    padding: 1px;
 }
 
 h3 {
