--- a/styles/base.css
+++ b/styles/base.css
@@ -11,21 +11,21 @@ header, nav,  main, footer {
 
 header {
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: auto auto auto;
     padding: 5px;
 }
 
 header img {
     margin: 10px;
     max-width: 70px;
-    grid-column: 1;
+    grid-column: 2;
     border: 2px solid black;
     float: left;
 }
 
 header h1 {
     margin: auto;
-    grid-column: 2;
+    grid-column: 3;
 }
 
 nav {
@@ -49,6 +49,7 @@ main {
     grid-column: 1/2;
     /*grid-template-rows: auto auto auto auto;*/
     width: 90%;
+    font-weight: bold;
 }
 
 .card {
@@ -77,7 +78,8 @@ h3 {
     background-color: darkred;
     margin: 0;
     padding: 3px;
-    color: snow;  
+    color: snow; 
+    border-radius: auto; 
 }
 
 ul {
