--- a/styles/base.css
+++ b/styles/base.css
@@ -1,9 +1,11 @@
 body {
-    display: grid;
     margin: 0 auto;
 }
 
-header, nav,  main, footer {
+header,
+nav,
+main,
+footer {
     padding: 1px;
     font-family: 'Roboto Slab', 'Vollkorn', 'Pathway Extreme', sans-serif;
 }
@@ -38,10 +40,13 @@ nav a {
 main {
     margin: auto;
     margin-bottom: 5px;
-    display: grid;
-    grid-column: 1/2;
     width: 90%;
     font-weight: bold;
+}
+
+#main-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
 }
 
 .card {
@@ -50,7 +55,17 @@ main {
     border-radius: 5px;
 }
 
-h2, h3, p {
+#section-one {
+    grid-column: 1/2;
+}
+
+#section-two {
+    grid-column: 2/3;
+}
+
+h2,
+h3,
+p {
     text-align: center;
 }
 
@@ -59,9 +74,11 @@ hr.separator {
     margin: auto;
     margin-bottom: 5px;
     width: 100%;
+    grid-column: 1/3;
 }
 
 h2 {
+    grid-column: 1/3;
     margin-bottom: 0;
     padding: 1px;
 }
@@ -70,7 +87,7 @@ h3 {
     background-color: darkred;
     margin: 0;
     padding: 3px;
-    color: snow; 
+    color: snow;
 }
 
 ul {
@@ -87,7 +104,8 @@ li a {
     color: blue;
 }
 
-header, footer {
+header,
+footer {
     background-color: darkred;
     text-align: center;
     color: snow;
@@ -98,20 +116,71 @@ header, footer {
     color: yellow;
 }
 
-/* #menu {
-	font-size: 1.5rem;
-	border: 2px solid rgba(0,0,0,.3);
-	padding: 3px 7px 6px;
-	background-color: darkred;
-	color: snow;
+#header {
+    position: relative;
 }
 
-#menu::before {
-	content: "☰";
+.material-symbols-outlined {
+    cursor: pointer;
+    position: absolute;
+    right: 0.5rem;
+    top: .5rem;
+    margin-bottom: .5rem;
 }
 
-#menu.open::before {
-	content: "✖️";
+.nav-menu-close {
+    display: none;
+}
+
+#menu-Btn,
+#close-Btn {
+    display: inline-block;
+}
+
+.close-ham-btn {
+    display: none;
+}
+
+.close-close-btn {
+    display: none;
+}
+
+nav a {
+    padding: .5rem;
+    color: var(--text-color);
+    font-size: 1.75rem;
+    text-decoration: none;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes expandNav {
+    from {
+        max-height: 0;
+    }
+
+    to {
+        max-height: 500px;
+    }
+}
+
+#nav {
+    overflow: hidden;
+    max-height: 0;
+    animation: expandNav 2s ease-in-out forwards;
+}
+
+#nav a {
+    opacity: 0;
+    animation: fadeIn 4s ease-in-out forwards;
 }
 
 .active::before {
@@ -122,25 +191,60 @@ header, footer {
     content: "🍕";
 }
 
+#menu {
+    font-size: 1.5rem;
+    border: 2px solid rgba(0, 0, 0, .3);
+    padding: 3px 7px 6px;
+    background-color: darkred;
+    color: snow;
+}
+
+/* #menu::before {
+    content: "☰";
+}
+
+#menu.open::before {
+    content: "✖️";
+} */
+
 .navigation {
-	display: flex;
-	flex-direction: column;
-	list-style: none;
+    display: flex;
+    flex-direction: column;
+    list-style: none;
+}
+
+.navigation a {
+    display: block;
+    padding: 2px;
+    text-align: center;
+    text-decoration: none;
 }
 
 .navigation a:hover {
-	background-color: snow;
-	color: black;
-	font-weight: 700;
+    background-color: snow;
+    color: black;
+    font-weight: 700;
 }
 
 .open a {
-	display: block;
+    display: block;
 }
 
-iframe {
-    max-width: 400px;
-    max-height: 350px;
-    display: block;
-    border: 2px solid black;
-} */
+#map-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    position: relative;
+    padding-bottom: 75%;
+    height: 0;
+    margin: 5px 60px;
+}
+
+#map-container iframe {
+    position: absolute;
+    top: 0;
+    left: 50;
+    width: 100% !important;
+    height: 100% !important;
+    overflow: hidden;
+    grid-column: 1/3;
+}
