--- a/styles/large.css
+++ b/styles/large.css
@@ -2,19 +2,6 @@
     body {
         max-width: 700px;
     }
-    
-    main {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-    }
-
-    h2 , hr {
-        grid-column: 1/3;
-    }
-
-    header {
-        display: flex;
-    }
 
     h1 {
         font-size: 3rem;
@@ -22,7 +9,7 @@
 
     nav {
         display: flex;
-        flex-direction: row;
+        flex-direction: row !important;
         justify-content: space-evenly;
     }
 }
