--- a/styles/large.css
+++ b/styles/large.css
@@ -12,4 +12,27 @@
         flex-direction: row !important;
         justify-content: space-evenly;
     }
+
+    #main-container {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+
+    #menu {
+        display: none;
+        /* hide hamburger button */
+    }
+
+    .navigation {
+        flex-direction: row;
+    }
+
+    .navigation a {
+        display: block;
+        flex: 1 1 100%;
+    }
+
+    .stuff {
+        margin: 1rem auto;
+    }
 }
