--- a/styles/base.css
+++ b/styles/base.css
@@ -32,80 +32,6 @@ nav a {
     padding: 5px;
 }
 
-main {
-    margin: auto;
-    margin-bottom: 5px;
-    width: 90%;
-    font-weight: bold;
-}
-
-.card {
-    border: 2px solid black;
-    margin: 5px;
-    border-radius: 5px;
-}
-
-#section-one {
-    grid-column: 1/2;
-}
-
-#section-two {
-    grid-column: 2/3;
-}
-
-h2,
-h3,
-p {
-    text-align: center;
-}
-
-hr.separator {
-    border: 1px solid black;
-    margin: auto;
-    margin-bottom: 5px;
-    width: 100%;
-    grid-column: 1/3;
-}
-
-h2 {
-    grid-column: 1/3;
-    margin-bottom: 0;
-    padding: 1px;
-}
-
-h3 {
-    background-color: darkred;
-    margin: 0;
-    padding: 3px;
-    color: snow;
-}
-
-ul {
-    margin: 0;
-    padding: 10px;
-}
-
-li {
-    list-style: none;
-    padding: 3px;
-}
-
-li a {
-    color: blue;
-}
-
-header,
-footer {
-    background-color: darkred;
-    text-align: center;
-    color: snow;
-    border: 2px solid black;
-}
-
-.lastMod {
-    color: yellow;
-}
-
 #menu {
     font-size: 1.5rem;
     border: 0;
@@ -146,7 +72,6 @@ footer {
     font-weight: 700;
 }
 
-/* when the button is clicked - the open class is toggled (added/removed) */
 .open a {
     display: block;
 }
@@ -159,19 +84,82 @@ footer {
     content: "🍕";
 }
 
+main {
+    margin: auto;
+    margin-bottom: 5px;
+    width: 90%;
+    font-weight: bold;
+}
+
+h2,
+h3,
+p {
+    text-align: center;
+}
+
+h2 {
+    grid-column: 1/3;
+    margin-bottom: 0;
+    padding: 1px;
+}
+
+/* This is the line separator under the h2 */
+hr.separator {
+    border: 1px solid black;
+    margin: auto;
+    margin-bottom: 5px;
+    width: 100%;
+    grid-column: 1/3;
+}
+
+h3 {
+    background-color: darkred;
+    margin: 0;
+    padding: 3px;
+    color: snow;
+}
+
+.card {
+    border: 2px solid black;
+    margin: 5px;
+    border-radius: 5px;
+}
+
+ul {
+    margin: 0;
+    padding: 10px;
+}
+
+li {
+    list-style: none;
+    padding: 3px;
+}
+
+li a {
+    color: blue;
+}
+
+header,
+footer {
+    background-color: darkred;
+    text-align: center;
+    color: snow;
+    border: 2px solid black;
+}
+
 #map-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
     position: relative;
-    padding-bottom: 75%;
-    height: 0;
-    margin: 10px 60px;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
 }
 
 #map-container iframe {
-    position: absolute;
-    width: 100% !important;
-    height: 100% !important;
-    overflow: hidden;
-    grid-column: 1/3;
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.lastMod {
+    color: yellow;
 }
