--- a/styles/large.css
+++ b/styles/large.css
@@ -35,4 +35,15 @@
     .stuff {
         margin: 1rem auto;
     }
+
+    #map-container {
+        position: relative;
+        width: 100%;
+        height: 250px;
+    }
+
+    #map {
+        width: 100%;
+        height: 100%;
+    }
 }
