Struggling with grid again, but at least it changes in large and mobile view...

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -92,6 +92,11 @@ nav a {
     display: block;
 }
 
+#main-container {
+    display: grid;
+    grid-template-columns: 1fr;
+}
+
 main {
     margin: auto;
     text-align: center;
