--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -8,7 +8,8 @@
 
     #main-container {
         display: grid;
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 1fr;
     }
 
     #menu {
