--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -106,9 +106,17 @@ main {
 }
 
 main img {
-    height: 300px;
+    height: 70px;
     margin: auto;
     background-color: snow;
     display: block;
     /* border: 2px solid black; */
+}
+
+#mode {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    font-size: 3rem;
+    cursor: pointer;
 }
