--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -1,4 +1,7 @@
 @media screen and (min-width:550px) {
+    body {
+        max-width: 700px;
+    }
 
     nav {
         display: flex;
@@ -24,6 +27,14 @@
     .navigation a {
         display: block;
         flex: 1 1 100%;
+    }
+
+    main img {
+        height: 300px;
+        margin: auto;
+        background-color: snow;
+        display: block;
+        /* border: 2px solid black; */
     }
 
     .stuff {
