Updated layout to start looking better. It's a work in progress though.

--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -1,6 +1,38 @@
 @media screen and (min-width:550px) {
     body {
-        max-width: 700px;
+        max-width: 80%;
+    }
+
+    header {
+        display: flex;
+        /* justify-content: space-evenly; */
+        justify-content: space-between;
+        align-items: center;
+        padding: 5px;
+    }
+
+    .header-left {
+        display: flex;
+    }
+
+    #mode {
+        position: relative;
+        top: 0rem;
+        left: 0rem;
+        font-size: 1.5rem;
+        cursor: pointer;
+    }
+
+    .vertical-line {
+        display: block;
+        width: 2px;
+        height: 100px;
+        background-color: #000;
+        margin: 0 20px;
+    }
+
+    .header-right {
+        display: flex;
     }
 
     nav {
@@ -9,10 +41,26 @@
         justify-content: space-evenly;
     }
 
-    #main-container {
+    main {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         grid-template-rows: 1fr;
+    }
+
+    main img {
+        grid-column: 1/4;
+        height: 300px;
+        width: 100%;
+        margin: 0px;
+        background-color: snow;
+    }
+
+    .events {
+        grid-column: 1/3;
+    }
+
+    .weather {
+        grid-column: 3/3;
     }
 
     #menu {
@@ -27,14 +75,6 @@
     .navigation a {
         display: block;
         flex: 1 1 100%;
-    }
-
-    main img {
-        height: 300px;
-        margin: auto;
-        background-color: snow;
-        display: block;
-        /* border: 2px solid black; */
     }
 
     .stuff {
