--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -1,6 +1,5 @@
 body {
     margin: 0 auto;
-    max-width: 80%;
 }
 
 header,
@@ -19,7 +18,6 @@ footer {
 }
 
 header {
-    /* display: flex; */
     justify-content: space-evenly;
     align-items: center;
     padding: 5px;
@@ -27,17 +25,16 @@ header {
 
 header img {
     max-width: 150px;
+    max-height: 150px;
+    margin: auto;
     background-color: snow;
     /* display: block; */
     border: 2px solid black;
 }
 
-/* .vertical-line {
-    width: 2px;
-    height: 50px;
-    background-color: #000;
-    margin: 0 20px;
-} */
+.vertical-line {
+    display: none;
+}
 
 .active::before {
     content: "👉";
@@ -92,12 +89,9 @@ nav a {
     display: block;
 }
 
-#main-container {
+main {
     display: grid;
     grid-template-columns: 1fr;
-}
-
-main {
     margin: auto;
     text-align: center;
     margin-bottom: 5px;
@@ -106,17 +100,23 @@ main {
 }
 
 main img {
-    height: 70px;
+    height: 80%;
+    width: 80%;
     margin: auto;
     background-color: snow;
-    display: block;
+    /* display: block; */
     /* border: 2px solid black; */
+}
+
+button {
+    position: absolute;
+
 }
 
 #mode {
     position: absolute;
     top: 1rem;
-    right: 1rem;
-    font-size: 3rem;
+    left: 1rem;
+    font-size: 1.5rem;
     cursor: pointer;
 }
