Updated chamber page.

--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -47,7 +47,7 @@
         grid-template-rows: 1fr;
     }
 
-    main img {
+    main .hero {
         grid-column: 1/4;
         height: 300px;
         width: 100%;
