--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -99,6 +99,11 @@ main {
     font-weight: bold;
 }
 
+.hero {
+    margin: auto;
+    position: relative;
+}
+
 main img {
     height: 80%;
     width: 80%;
@@ -110,7 +115,20 @@ main img {
 
 button {
     position: absolute;
+    top: 10px;
+    left: 120px;
+    background: radial-gradient(#fafbfd, hsl(45deg 17.39% 72.94%));
+    border: 1px solid rgba(0, 0, 0, .75);
+    padding: 0.5rem;
+    box-shadow: 0 0 3rem #fff;
+    opacity: 0.75;
+}
 
+button p {
+    margin: 0;
+    padding: .25rem;
+    font-weight: 700;
+    font-size: 1rem;
 }
 
 #mode {
