--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -1,34 +1,83 @@
-/* @media screen and (min-width:550px) {
-    .hero {
-        margin: auto;
+@media screen and (min-width:550px) {
+    body {
+        max-width: 80%;
+    }
+
+    header {
+        display: flex;
+        /* justify-content: space-evenly; */
+        justify-content: space-between;
+        align-items: center;
+        padding: 5px;
+    }
+
+    .header-left {
+        display: flex;
+    }
+
+    #mode {
         position: relative;
-        border: 1px solid rgba(0, 0, 0, .1);
-        height: 300px;
+        top: 0rem;
+        left: 0rem;
+        font-size: 1.5rem;
+        cursor: pointer;
     }
 
-    .hero img {
+    .vertical-line {
+        display: block;
+        width: 2px;
+        height: 100px;
+        background-color: #000;
+        margin: 0 20px;
+    }
+
+    .header-right {
+        display: flex;
+    }
+
+    nav {
+        display: flex;
+        flex-direction: row !important;
+        justify-content: space-evenly;
+    }
+
+    main {
         display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 1fr;
+    }
+
+    main .hero {
         grid-column: 1/4;
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
+        height: 200px;
+        width: 90%;
+        margin: aut0;
+        background-color: snow;
     }
 
-    .herolabel {
-        position: absolute;
-        top: 10px;
-        left: 10px;
-        background: radial-gradient(#b3bbd4, hsl(221.25deg 15.24% 41.18%));
-        border: 1px solid rgba(0, 0, 0, .75);
-        padding: 0.5rem;
-        box-shadow: 0 0 3rem #fff;
-        opacity: 0.75;
+    .events {
+        grid-column: 1/3;
     }
 
-    .herolabel p {
-        margin: 0;
-        padding: .25rem;
-        font-weight: 700;
-        font-size: 1rem;
+    .weather {
+        grid-column: 3/3;
     }
-} */
+
+    #menu {
+        display: none;
+        /* hide hamburger button */
+    }
+
+    .navigation {
+        flex-direction: row;
+    }
+
+    .navigation a {
+        display: block;
+        flex: 1 1 100%;
+    }
+
+    .stuff {
+        margin: 1rem auto;
+    }
+}
