Fixed a typo in my medium.css file.

--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -51,7 +51,7 @@
         grid-column: 1/4;
         height: 200px;
         width: 90%;
-        margin: aut0;
+        margin: auto;
         background-color: snow;
     }
 
