Fixed the main img to include object-fit: cover as the feedback gave.

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -105,8 +105,9 @@ main {
 }
 
 main img {
-    height: 90%;
-    width: 90%;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
     margin: auto;
     background-color: snow;
     /* display: block; */
