--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -5,7 +5,6 @@
 
     header {
         display: flex;
-        /* justify-content: space-evenly; */
         justify-content: space-between;
         align-items: center;
         padding: 5px;
@@ -33,6 +32,7 @@
 
     .header-right {
         display: flex;
+        margin: auto;
     }
 
     nav {
