Working more on the form page but struggling just a tad.

--- a/styles/form.css
+++ b/styles/form.css
@@ -1,5 +1,50 @@
-form {
+.feedback {
     padding: 5px;
+}
+
+.feedback label {
+    display: block;
+    padding-top: 1rem;
+    color: darkred;
+    font-size: .9rem;
+}
+
+.feedback input[type="text"],
+.feedback input[type="password"],
+.feedback input[type="email"] {
+    background-color: #eee;
+    display: block;
+    border: solid 1px #999;
+    border-radius: 6px;
+    padding: .75rem;
+    color: #555;
+    width: 100%;
+    max-width: 400px;
+    appearance: none;
+}
+
+.feedback input[type="range"] {
+    margin-right: 6px;
+}
+
+.feedback input[type="submit"] {
+    border: none;
+    background-image: linear-gradient(darkred, rgb(117, 0, 0));
+    color: #fff;
+    border-radius: 6px;
+    padding: .8rem;
+    width: 96%;
+    max-width: 400px;
+    /* margin: -1rem 2% 2rem 2%; */
+    box-shadow: 1px 1px 4px #999;
+}
+
+.feedback input:required {
+    border-left: #ff0000;
+}
+
+.feedback input:required:valid {
+    border-left: green;
 }
 
 /* Style for the paragraph on the record page */
