--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -107,6 +107,89 @@
     margin-top: 10px;
 }
 
+/* Join Page CSS */
+@media screen and (min-width: 700px) {
+    #joinPage {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-gap: 15px;
+        margin: auto;
+        padding: 10px;
+    }
+}
+
+.joinForm:root {
+    --background-color: #eee;
+    --border-radius: 6px;
+    --border-left-width: thick;
+}
+
+#joinLeft,
+#joinRight {
+    border: solid 1px #000;
+    border-radius: var(--border-radius);
+    padding: 10px;
+}
+
+.joinForm {
+    padding: 5px;
+}
+
+.joinForm label {
+    display: block;
+    padding-top: 1rem;
+    color: black;
+    font-size: .9rem;
+}
+
+.joinForm input[type="text"],
+.joinForm input[type="password"],
+.joinForm input[type="email"],
+.joinForm input[type="tel"] {
+    background-color: var(--background-color);
+    display: block;
+    border: solid 1px #999;
+    border-radius: var(--border-radius);
+    padding: .50rem;
+    color: #555;
+    width: 100%;
+    max-width: 400px;
+    appearance: none;
+    margin-top: 3px;
+}
+
+.joinForm input[type="range"] {
+    margin-right: 6px;
+}
+
+.joinForm input[type="submit"] {
+    border: none;
+    background-image: linear-gradient(#3f2894, #3f2894);
+    color: #fff;
+    border-radius: var(--border-radius);
+    padding: .8rem;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    width: 96%;
+    max-width: 400px;
+    /* margin: -1rem 2% 2rem 2%; */
+    box-shadow: 1px 1px 4px #999;
+}
+
+.joinForm input:required {
+    border-left-color: #ff0000;
+    border-left-width: var(--border-left-width);
+}
+
+.joinForm input:required:valid {
+    border-left-color: green;
+    border-left-width: var(--border-left-width);
+}
+
+#membershipLevel {
+    margin-top: 3px;
+}
+
 @media (min-width: 551px) {
 
     /*Make image larger on hover over*/
