--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -110,13 +110,14 @@
 /* Directory Page CSS */
 #companyList {
     padding: 1px;
-    border: 1px solid black;
+    border: 2px solid black;
     flex-direction: column;
     text-align: center;
+    margin: 5px;
 }
 
 .company {
-    border: 1px solid #ddd;
+    border: 1px solid #000;
     padding: 10px;
     margin: 10px;
     text-align: center;
