Updated the weather on my course home page using my weather API.

--- a/styles/base.css
+++ b/styles/base.css
@@ -178,6 +178,18 @@ footer {
     border: 2px solid black;
 }
 
+#weather-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+#weather-details {
+    margin-bottom: 10px;
+}
+
 #map-container {
     position: relative;
     width: 100%;
