--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -103,7 +103,7 @@ nav a {
     position: relative;
 }
 
-#container-home img {
+.hero img {
     height: 100%;
     width: 100%;
     object-fit: cover;
