--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -117,7 +117,7 @@ nav a {
     position: absolute;
     top: 10px;
     left: 120px;
-    background: radial-gradient(#fafbfd, hsl(45deg 17.39% 72.94%));
+    background: radial-gradient(#fafbfd, rgb(86 181 242));
     border: 1px solid rgba(0, 0, 0, .75);
     padding: 0.5rem;
     opacity: 0.75;
