--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -73,7 +73,10 @@
 
     .navigation a {
         display: block;
-        flex: 1 1 100%;
+        max-width: 100%;
+        height: auto;
+        margin: auto;
+        display: block;
     }
 
     .stuff {
