Hoping for the best as I think I'm done with my chamber page.

--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -1,6 +1,6 @@
-@media screen and (min-width:700px) {
+@media screen and (min-width:900px) {
     body {
-        max-width: 80%;
+        max-width: 100%;
     }
 
     header {
@@ -17,38 +17,38 @@
     /* Left section of the header */
     .header-left {
         display: flex;
-        align-items: center;
+        margin-left: auto;
     }
 
     /* Dark mode button */
     #mode {
-        font-size: 1.5rem;
+        font-size: 2rem;
         cursor: pointer;
     }
 
     /* Logo and chamber name */
     .header-left img {
         max-width: 100px;
-        /* Adjust logo size as needed */
         max-height: 100px;
-        /* Adjust logo size as needed */
+        margin: 10px;
     }
 
     .header-left h1 {
         margin-left: 10px;
+        font-size: 2em;
     }
 
     /* Vertical line separator */
     .vertical-line {
         border-left: 2px solid #000;
         height: 100px;
-        margin: 0 20px;
+        margin: auto;
         display: block;
     }
 
     .header-right {
         display: flex;
-        margin: auto;
+        margin-right: auto;
     }
 
     /* Navigation menu */
@@ -61,6 +61,7 @@
         text-decoration: none;
         color: snow;
         padding: 20px;
+        font-size: large;
         text-align: center;
         display: block;
     }
