--- a/scootsrentals/styles/base.css
+++ b/scootsrentals/styles/base.css
@@ -1,4 +1,5 @@
 /* https://coolors.co/ff6f61-f4a460-965a38-00ced1-000000 */
+/* https://coolors.co/visualizer/ff6f61-f4a460-965a38-00ced1-000000 */
 
 body {
     margin: auto;
