--- a/scootsrentals/styles/base.css
+++ b/scootsrentals/styles/base.css
@@ -10,7 +10,7 @@ footer {
     margin: 10px;
     padding: 5px;
     align-items: center;
-    background-color: #00ced1;
+    background-color: #ff6f61;
     border: 2px solid #000000;
 }
 
@@ -44,18 +44,33 @@ hr {
 }
 
 /* Rentals Page CSS */
+
+#rentalPage {
+    width: 57%;
+    padding: 2px;
+    margin: auto;
+    text-align: center;
+}
+
+#rentalPage hr {
+    width: 40%;
+    margin: auto;
+}
+
 table {
+    margin-top: 10px;
     width: 100%;
     border-collapse: collapse;
 }
 
 th,
 td {
-    border: 1px solid #ddd;
-    padding: 8px;
+    border: 2px solid #000000;
+    padding: 4px;
     text-align: center;
+    background-color: #00ced1;
 }
 
 th {
-    background-color: #f2f2f2;
+    background-color: #F4A460;
 }
